fix some spacing issues

--- a/src/routes/game/components/elements/chatBox/ChatBox.module.css
+++ b/src/routes/game/components/elements/chatBox/ChatBox.module.css
@@ -5,6 +5,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  line-height: normal;
 }
 
 .chatBoxContainer {
