--- a/src/routes/game/components/zones/zoneCountsZone/ZoneCounts.module.css
+++ b/src/routes/game/components/zones/zoneCountsZone/ZoneCounts.module.css
@@ -8,6 +8,7 @@
   border-radius: 10px;
   flex: 0 0 10vh;
   grid-area: zonecounts;
+  line-height: normal;
 }
 
 .column {
